--- a/public/index.html
+++ b/public/index.html
@@ -21,17 +21,17 @@
         <li>
             <input type="checkbox" class="delete-checkbox">
             <img src="images/movie1.png" alt="범죄도시 4 포스터" style="width: 200px;"><br>
-            <a href="리뷰 사이트" target="_blank">범죄도시 4</a>
+            <a href="review" target="_blank">범죄도시 4</a>
         </li>
         <li>
             <input type="checkbox" class="delete-checkbox">
             <img src="images/movie2.png" alt="듄 포스터" style="width: 200px;"><br>
-            <a href="리뷰 사이트" target="_blank">듄</a>
+            <a href="review" target="_blank">듄</a>
         </li>
         <li>
             <input type="checkbox" class="delete-checkbox">
             <img src="images/movie3.png" alt="트랜스포머 포스터" style="width: 200px;"><br>
-            <a href="리뷰 사이트" target="_blank">트랜스포머</a>
+            <a href="review" target="_blank">트랜스포머</a>
         </li>
     </ul>
 
